<resources>
    <string name="app_name">FootPrint</string>
    <string name="textTitle">FootPrint</string>
    <string name="btnCreateAccount">FootPrint Login In</string>
    <string name="btnFBAccount">FaceBook</string>
    <string name="textTerms">I Agree to Terms of Service and Privacy Policy</string>
    <string name="EmailAccount">Google Email</string>
    <string name="Password">Password</string>
    <string name="confirm">Confirm</string>
    <string-array name="textConstellation">
        <item>Aquarius 1/21 - 2/19</item>
        <item>Pisces 2/20 - 3/20</item>
        <item>Aries 3/21 - 4/19</item>
        <item>Taurus 4/20 - 5/20</item>
        <item>Gemini 5/21 - 6/21</item>
        <item>Cancer 6/22 - 7/22</item>
        <item>Leo 7/23 - 8/22</item>
        <item>Virgo 8/23 - 9/22</item>
        <item>Libra 9/23 - 10/23</item>
        <item>Scorpio 10/24 - 11/21</item>
        <item>Sagittarius 11/22 - 12/20</item>
        <item>Capricorn 12/21 - 1/20</item>
    </string-array>

    <string-array name="textCheckInShareState">
        <item>Public</item>
        <item>Private</item>
    </string-array>

    <string-array name="textMapSate">
        <item>All</item>
        <item>Restaurant</item>
        <item>Hotel</item>
        <item>Spot</item>
        <item>Recommended by Tourist</item>
    </string-array>

    <string-array name="textInsertLandMark">
        <item>Restaurant</item>
        <item>Hotel</item>
        <item>Spot</item>
        <item>Recommended by Tourist</item>
    </string-array>

    <string name="facebook_app_id">1637855299849357</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeBtnNavigation">Home</string>
    <string name="homeStrokeBtnNavigation">Stroke</string>
    <string name="homeTakePictureBtnNavigation">Share</string>
    <string name="homeFriendsBtnNavigation">Friends</string>
    <string name="homePersonalBtnNavigation">Personal</string>
    <string name="createNewAccount">Create New  Account</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="Account">Account</string>
    <string name="Constellation">Constellation</string>
    <string name="Birthday">Birthday</string>
    <string name="nickName">Nick Name</string>
    <string name="BirthdayDate">MM/DD</string>
    <string name="textForgotPasswordMessage">Please enter your email to search for your account.</string>
    <string name="textConfirm">Confirm</string>
    <string name="textCancel">Cancel</string>
    <string name="textForgotPassword">Find Your Account</string>
    <string name="textSendForgotPasswordMessage">Success send the new password to your email</string>
    <string name="textLoginIn">Login In</string>
    <string name="textLoginInMessage">Please enter your Account and Password</string>
    <string name="btnTerms">I Agree to Terms of Service and Privacy Policy</string>
    <string name="textTripName">TripName</string>
    <string name="textAll">All</string>
    <string name="textGroup">Group</string>
    <string name="textPersonal">Personal</string>
    <string name="textDate">Date</string>
    <string name="textDay">Day</string>
    <string name="textUserID">UserID</string>
    <string name="textFriendList">FriendList</string>
    <string name="textTakePictureLarge">Take Picture</string>
    <string name="textPickPicture">Pick Picture</string>
    <string name="col_Name">Name</string>
    <string name="col_Type">Type</string>
    <string name="col_Address">Address</string>
    <string name="CheckInSharePopUpOption">Options</string>
    <string name="CheckInShareFormCamera">Form Camera</string>
    <string name="CheckInShareFormAlbum">Form Album</string>
    <string name="msg_NoCameraApp">No Camera App</string>
    <string name="CheckInShareInsert">Insert</string>
    <string name="etCheckInShareDescription">Image Description</string>
    <string name="CheckInShareState">Image State</string>
    <string name="CheckInShareLandMark">Choose LandMark</string>
    <string name="checkInShareNoCameraApp">No Camera App</string>
    <string name="textSave">Save</string>
    <string name="msg_accountExist">Account Exist</string>
    <string name="msg_accountNotValid">Not a valid Email</string>
    <string name="msg_accountNotEmpty">Field can\'t be empty</string>
    <string name="msg_birthdayNotVaild">Not a valid Birthday</string>
    <string name="msg_InsertFail">InsertFail</string>
    <string name="msg_InsertSuccess">InsertSuccess</string>
    <string name="msg_NoNetwork">NoNetwork</string>
    <string name="createAccountSuccess">Create Account Success</string>
    <string name="textNotValid">Not Valid</string>
    <string name="textNotReadTerms">Not Read Terms</string>
    <string name="textCheckInShareChooseLandMark">Choose Land Mark</string>
    <string name="textCheckInShareChooseLandMarkId">CheckInShareChooseLandMarkId</string>
    <string name="msg_NoFoundLandMark">No Found Land Mark</string>
    <string name="msg_NoImage">No Image</string>
    <string name="msg_NoLandMark">No Land Mark</string>
    <string name="title_activity_land_mark_info">LandMarkInfo</string>
    <string name="mapInfoDetailTitle">mapInfoDetailTitle</string>
    <string name="openHours">open Hours</string>
    <string name="landMarkDescription">land Mark Description</string>
    <string name="landMarkAddress">land Mark Address</string>
    <string name="title_activity_home_news__personal">HomeNewsActivity_Personal</string>
    <string name="UserName">User Name</string>
    <string name="set">set</string>
    <string name="reminder">reminder</string>
    <string name="logout">logout</string>
    <string name="cancle">cancle</string>
    <string name="textTakePictureSmall">Take Picture (small)</string>
    <string name="install">You need to install</string>
    <string name="noAnything">You do not choose anything</string>
    <string name="msg_permission">You need to enable permission to display location!</string>
    <string name="needAllowPermission">\"These permissions are mandatory to get your location. You need to allow them.\"</string>
    <string name="msg_ok">Ok</string>
    <string name="msg_cancel">Cancel</string>
    <string name="msg_NoNewsFound">NoNewsFound</string>
    <string name="msg_NoFoundPictures">NoFoundPictures</string>
    <string name="msg_NoFoundNewsPictures">NoFoundNewsPictures</string>
    <string name="msg_NoMessage">NoMessage</string>
    <string name="noCommentMessage">NoMessage</string>
    <string name="msg_CollectionSuccess">收藏</string>
    <string name="msg_Liked">讚</string>
    <string name="msg_InsertFrindSuccess">好友邀請送出</string>
    <string name="textShare">Share</string>
    <string name="msg_LastDay">Last Day</string>
    <string name="Add">+</string>
    <string name="minusDay">-</string>
    <string name="moveMap">Show Map</string>
    <string name="msg_UpdateFail">Update Fail</string>
    <string name="msg_UpdateSuccess">Update Success</string>
    <string name="delete">確定刪除行程?</string>
    <string name="msg_DeleteFail">Delete Fail</string>
    <string name="msg_DeleteSuccess">Delete Success</string>
    <string name="msg_ShareFail">Share Fail</string>
    <string name="msg_ShareSuccess">Share Success</string>
    <string name="text_MessageEmpty">MessageEmpty</string>
    <string name="textAddtoGroup">Add Trip</string>
    <string name="msg_NoTripsFound">NoTripsFound</string>
    <string name="msg_NameIsInvalid">NameIsInvalid</string>
    <string name="text_Exit">Exit</string>
    <string name="msg_WantToExit">Do you want to Exit</string>
    <string name="text_No">No</string>
    <string name="CheckInShareLandMarkSelf">Create New LandMark</string>
    <string name="textLandMarkName">Name</string>
    <string name="textLandMarkAddress">Address</string>
    <string name="textLandMarkDescription">Description</string>
    <string name="textLandMarkOpeningHours">Opening Hours</string>
    <string name="textLandMarkEvaluation">Evaluation 0 ~ 5</string>
    <string name="ckLandMarkState">Type</string>
    <string name="textAddFriendtoGroup">Add Trip Friend</string>
</resources>
