<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorbackground"
    tools:context=".loginIn">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textTitle"
        android:gravity="center"
        android:textSize="50dp"
        android:textStyle="bold|italic"
        android:textColor="@color/colorTitle"/>

    <ImageView
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:background="@drawable/footprintlogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@drawable/footprintlogo" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnCreateAccount"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/colortextWhite"
            android:background="@color/colorbtnCreateAccount"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@drawable/facebook" />

        <Button
            android:id="@+id/btnFBAccount"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnFBAccount"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/colortextWhite"
            android:background="@color/colorbtnFB"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <CheckBox
            android:id="@+id/cbTerms"
            android:layout_width="345dp"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:text="@string/btnTerms"/>

    </LinearLayout>
</LinearLayout>