<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorbtnCreateAccount">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/mapInfoDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toEndOf="@id/mapInfoDetailBack"
                android:text="@string/mapInfoDetailTitle"
                android:gravity="center" />

            <ImageButton
                android:id="@+id/mapInfoDetailBack"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@color/colorbtnCreateAccount"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/baseline_keyboard_arrow_left_black_36" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/mapInfoDetailPicture"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/home_news_picture"/>

    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="50dp">

        <RatingBar
            android:id="@+id/mapInfoDetailRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize="0.1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="onImageViewClick"
            android:background="@color/colorNull" />

    </FrameLayout>


    <TextView
        android:id="@+id/mapInfoDetailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/landMarkAddress"/>

    <TextView
        android:id="@+id/mapInfoDetailDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/landMarkDescription"/>

    <TextView
        android:id="@+id/mapInfoDetailOpenHours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/openHours"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/mapInfoDetailRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>

<!--
     <ImageButton
                android:id="@+id/mapInfoDetailPlan"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/home_news_collection_black"
                android:background="@color/colorbtnCreateAccount"/>
-->